<resources>
    <string name="app_name">Photo Viewer</string>
    <string name="action_reset_view">Reset View</string>
</resources>
