<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="4dp"
    tools:context="com.yoprogramo.photoviewer.view.DetailActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/text_view_id_picture"
            android:gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="6"
            >

        <ImageView

            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:id="@+id/detailImageView"
            android:layout_height="match_parent" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/text_view_title"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>



</LinearLayout>